<resources>
    <string name="app_name">ST BLE Mesh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="URL_BASE">https://stblemesh.azurewebsites.net</string>
    <string name="URL_MED">/API/v1/</string>
    <string name="API_CreateNetwork">createNetwork</string>
    <string name="API_CreateInvitation">invite</string>
    <string name="API_JoinNetwork">joinNetwork</string>
    <string name="API_UploadNetwork">uploadDb</string>
    <string name="API_DownloadNetwork">downloadDb</string>
    <string name="API_SignUp">Create</string>
    <string name="API_LoginDetails">Login</string>
    <string name="API_LogOut">logout</string>
    <string name="API_provisionerRegistration">provisionerRegistration</string>
    <string name="API_changePassword">changePassword</string>
    <string name="API_registerSecurityQuestion">registerSecurityQuestion</string>
    <string name="API_retrieveSecurityQuestions">retrieveSecurityQuestions</string>
    <string name="API_submitSecurityAnswer">submitSecurityAnswer</string>
    <string name="API_getNetworks">getNetworks</string>
    <string name="moble_start_fail">Unable to start MoBLE stack. Please check if Bluetooth is enabled.</string>
    <string name="network_is_full">Network is full. Unable to add new device</string>
    <string name="action_App_Setting">App Setting</string>
    <string name="unknown">Unknown devices</string>
    <string name="disconectedDialogTitle">Connection lost</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Delete">Delete</string>
    <string name="warning">Loading a configuration file will overwrite the current configuration. Do you want to continue?</string>
    <string name="add_group">Add Group</string>
    <string name="key_shared_prefs">SHARED_PREFS</string>
    <string name="warning_common_please_check_your_connection_and_try_again_later">Enable internet connection for cloud features.</string>
    <string name="key_mesh_data">MESH DATA</string>
    <string name="str_element_setting">Element Settings</string>
    <string name="str_group_setting">Group Settings</string>
    <string name="str_add_group">Add Group</string>
    <string name="str_lightsgroup_address">c000</string>
    <string name="key_proxy_address">PROXY ADDRESS</string>
    <string name="URL_GET_MESH_DATA">getMeshDataURL</string>
    <string name="str_delete_mesh_data">Are you sure you want to delete your current mesh data ?</string>
    <string name="str_setting_reset">Note : All your setting will be reset to default.</string>
    <string name="key_serializable">Key_Serializable</string>
    <string name="key_view_type">KEY_VIEW_TYPE</string>
    <string name="key_user_help_data">Help DATA</string>
    <string name="key_subscription_prov_data">subscription_prov</string>
    <string name="key_publication_prov_data">publication_prov</string>
    <string name="str_element_label">Element Name</string>
    <string name="str_create_network_msg_label">Do you want to setup new network or import the existing one ?</string>
    <string name="str_login_import_label">Note : Import previous network settings.</string>
    <string name="str_login_label">Login</string>
    <string name="str_create_network_label">Create Network</string>
    <string name="str_cancel_label">Cancel</string>
    <string name="str_ok_label">Ok</string>
    <string name="str_mesh_name_label">Mesh Name</string>
    <string name="str_provisioned_label">Nodes</string>
    <string name="str_unprovisioned_label">Devices</string>
    <string name="str_group_label">Groups</string>
    <string name="str_node_label">Node</string>
    <string name="str_unicastno_label">Unicast Address</string>
    <string name="str_set_vendor_model_as_default">Vendor Model</string>
    <string name="str_use_reliable_as_default">Reliable Messaging</string>
    <string name="str_connect_proxy_using_node_id">Node Identity Proxy</string>
    <string name="str_helper_guide_use_label">User Help Guide on Start</string>
    <string name="str_exchange_mesh_configuration">Exchange Mesh Configuration</string>
    <string name="str_help_label">Help</string>
    <string name="str_PrivacyPolicy">Privacy Policy</string>
    <string name="str_AppSettings">App Settings</string>
    <string name="str_share_configuration_label">Share Configuration</string>
    <string name="str_load_configuration_label">Configuration</string>
    <string name="str_app_key_management_label">App Key Management</string>
    <string name="str_element_setting_label">Element Settings</string>
    <string name="str_forget_network_label">Forget Current Network</string>
    <string name="str_about_label">About</string>
    <string name="str_model_label">Models</string>
    <string name="str_cloud_interaction_label">Cloud Interaction</string>
    <string name="str_cloud_invitation_label">Invite Mesh</string>
    <string name="str_cloud_join_label">Join Network</string>
    <string name="str_cloud_login_label">Login</string>
    <string name="str_cloud_signup_label">Sign Up</string>
    <string name="str_tryagain_label">Try Again</string>
    <string name="str_import_label">Import</string>
    <string name="key_user_login_data">KEY LOGIN DATA</string>
    <string name="key_user_userkey_data">USER KEY</string>
    <string name="str_meshuuid_label">Mesh UUID</string>
    <string name="str_importfrommail_label">Import network from mail</string>
    <string name="str_importfromcloud_label">Import network from cloud</string>
    <string name="key_uuid_data">KEY UUID</string>
    <string name="key_provisioner_data">KEY PROVISIONER</string>
    <string name="str_signup_successfull_label">Sign Up Successful !!</string>
    <string name="str_logout_success_label">User logged out successfully !!</string>
    <string name="str_login_success_label">Logged in successfully !!</string>
    <string name="str_netwrk_success_label">Network created successfully !!</string>
    <string name="str_invitation_note_label">Note : Above code can be shared to mesh joiner in order to provide invitation data so that anyone can join the current network.</string>
    <string name="str_register_success_label">User registration done successfully !!</string>
    <string name="str_session_expired_label">Session Expired</string>
    <string name="str_login_warning_label">Kindly login yourself.</string>
    <string name="str_session_restarted_label">Session restarted.</string>
    <string name="key_node_feature">features</string>
    <string name="FILE_bluenrg_mesh_json">bluenrg-mesh_configuration.json</string>
    <string name="str_ble_mesh_label">BLE Mesh</string>
    <string name="key_cloud_data">INVITED CLOUD DATA</string>
    <string name="str_cloud_success_label">Cloud data downloaded successfully.</string>
    <string name="key_current_netkey">CURRENT USER NET KEY</string>
    <string name="key_current_appkey">CURRENT USER APP KEY</string>
    <string name="key_isuser_register">IS USER REGISTERED TO DOWNLOAD JSON</string>
    <string name="str_data_build_success_label">Data build successfully !!</string>
    <string name="key_ModelInfo">MODEL INFO</string>
    <string name="key_ModelInfo_Multi_Element">MODEL INFO MULTI ELEMENT</string>
    <string name="key_AppKeyData">App Key Data</string>
    <string name="str_default_group_label">Default</string>
    <string name="MODEL">MODEL</string>
    <string name="MODEL_ID_1200_TIME_MODEL">1200</string>
    <string name="MODEL_ID_0000_CONFIGURATION_SERVER">0000</string>
    <string name="MODEL_ID_0001_CONFIGURATION_CLIENT">0001</string>
    <string name="MODEL_ID_0002_HEALTH_SERVER">0002</string>
    <string name="MODEL_ID_0003_HEALTH_CLIENT">0003</string>
    <string name="MODEL_ID_1000_GENERIC_STATUS">1000</string>
    <string name="MODEL_ID_1001_GENERIC_ONOFF_CLIENT">1001</string>
    <string name="MODEL_ID_1002_GENERIC_LEVEL">1002</string>
    <string name="MODEL_ID_1003_GENERIC_LEVEL_CLIENT">1003</string>
    <string name="MODEL_ID_1000_GENERIC_ONOFF">1000</string>
    <string name="MODEL_ID_1004_GENERIC_DEFAULT_TRANSITION_TIME">1004</string>
    <string name="MODEL_ID_1006_GENERIC_POWER_ONOFF">1006</string>
    <string name="MODEL_ID_1007_GENERIC_POWER_SETUP_ONOFF">1007</string>
    <string name="MODEL_ID_100c_GENERIC_BATTERY">100c</string>
    <string name="MODEL_ID_1300_LIGHT_LIGHTNESS_MODEL">1300</string>
    <string name="MODEL_ID_1301_LIGHT_LIGHTNESS_SETUP_MODEL">1301</string>
    <string name="MODEL_ID_1100_SENSOR_MODEL">1100</string>
    <string name="MODEL_ID_1101_SENSOR_SETUP_SERVER">1101</string>
    <string name="MODEL_ID_1102_SENSOR_CLIENT">1102</string>
    <string name="MODEL_ID_00010030_VENDOR_MODEL">00010030</string>
    <string name="MODEL_ID_00300001_VENDOR_MODEL">00300001</string>
    <string name="MODEL_ID_10030_VENDOR_MODEL">10030</string>
    <string name="MODEL_ID_1303_LIGHT_CTL_SERVER">1303</string>
    <string name="MODEL_ID_1304_LIGHT_CTL_SETUP_SERVER">1304</string>
    <string name="MODEL_ID_1306_LIGHT_CTL_TEMPERATURE_SERVER">1306</string>
    <string name="MODEL_ID_1307_LIGHT_HSL_SERVER">1307</string>
    <string name="MODEL_ID_1308_LIGHT_HSL_SETUP_SERVER">1308</string>
    <string name="MODEL_ID_130a_LIGHT_HSL_HUE_SERVER">130a</string>
    <string name="MODEL_ID_130b_LIGHT_HSL_SATURATION_SERVER">130b</string>
    <string name="MODEL_ID_130f_LIGHT_LC_SERVER">130f</string>
    <string name="MODEL_ID_1310_LIGHT_LC_SETUP_SERVER">1310</string>
    <string name="MODEL_GROUP_NAME_LIGHT">LIGHT</string>
    <string name="MODEL_GROUP_NAME_SENSOR">SENSOR</string>
    <string name="MODEL_GROUP_NAME_TIME">TIME</string>
    <string name="MODEL_GROUP_NAME_VENDOR">VENDOR</string>
    <string name="MODEL_GROUP_NAME_GENERIC">GENERIC</string>
    <string name="MODEL_GROUP_NAME_HEALTH">HEALTH</string>
    <string name="MODEL_GROUP_NAME_CONFIGURATION">CONFIGURATION</string>
    <string name="MODEL_SUB_NAME_CONFIGURATION_SERVER">CONFIGURATION_SERVER</string>
    <string name="MODEL_SUB_NAME_CONFIGURATION_CLIENT">CONFIGURATION_CLIENT</string>
    <string name="MODEL_SUB_NAME_HEALTH_SERVER">HEALTH_MODEL_SERVER</string>
    <string name="MODEL_SUB_NAME_HEALTH_CLIENT">HEALTH_MODEL_CLIENT</string>
    <string name="MODEL_SUB_NAME_GENERIC_ONOFF">GENERIC_ONOFF_SERVER</string>
    <string name="MODEL_SUB_NAME_GENERIC_LEVEL">GENERIC_LEVEL_SERVER</string>
    <string name="MODEL_SUB_NAME_GENERIC_DEFAULT_TRANSITION_TIME">GENERIC_DEFAULT_TRANSITION_TIME</string>
    <string name="MODEL_SUB_NAME_GENERIC_BATTERY">GENERIC_BATTERY_SERVER</string>
    <string name="MODEL_SUB_NAME_GENERIC_POWER_ON_OFF_SERVER">GENERIC_POWER_ON_OFF_SERVER</string>
    <string name="MODEL_SUB_NAME_GENERIC_POWER_ON_OFF_SETUP_SERVER">GENERIC_POWER_ON_OFF_SETUP_SERVER</string>
    <string name="MODEL_SUB_NAME_GENERIC_ON_OFF_CLIENT">GENERIC_ON_OFF_CLIENT</string>
    <string name="str_enterusername_label">Enter Username</string>
    <string name="str_username_label">Username</string>
    <string name="str_submit_label">Submit</string>
    <string name="str_sync_label">Sync With Cloud</string>
    <string name="str_warning_sync_msg_label">After sync your cloud data will be get overriden by your local mesh data. Continue ?</string>
    <string name="str_note_sync_label">Note : Your current mesh data will be shared to other provisioner as well.</string>
    <string name="about_element_count">Element Count</string>
    <string name="about_algorithm_type">Algorithm Type</string>
    <string name="about_public_key">Public Key Type</string>
    <string name="about_staticOOB_type">Static OOB Type</string>
    <string name="str_output_oob_size">Output OOB Size</string>
    <string name="str_output_oob_action">Output OOB Action</string>
    <string name="str_input_oob_size">Input OOB Size</string>
    <string name="str_input_oob_action">Input OOB Action</string>
</resources>