<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtInvitationHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_enterusername_label"
            android:textColor="@color/whitecard"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/rounded_corner_fill_blue"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_username_label"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_submit_label"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:text="@string/str_invitation_note_label"
            android:visibility="gone"/>

    </LinearLayout>
</RelativeLayout>

